@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.16.0
+//   sqlc v1.17.2
 // source: account_changes.sql
 
 package generated
@@ -30,6 +30,26 @@ func (q *Queries) CreatePWResetCode(ctx context.Context, arg CreatePWResetCodePa
 	return i, err
 }
 
+const createVerificationCode = `-- name: CreateVerificationCode :one
+INSERT INTO "VerificationCodes" (
+    user_id, id
+) VALUES (
+    $1, $2
+) RETURNING id, user_id, created_on
+`
+
+type CreateVerificationCodeParams struct {
+	UserID int64 `json:"user_id"`
+	ID     int64 `json:"id"`
+}
+
+func (q *Queries) CreateVerificationCode(ctx context.Context, arg CreateVerificationCodeParams) (VerificationCode, error) {
+	row := q.db.QueryRowContext(ctx, createVerificationCode, arg.UserID, arg.ID)
+	var i VerificationCode
+	err := row.Scan(&i.ID, &i.UserID, &i.CreatedOn)
+	return i, err
+}
+
 const deletePreviousPWRestCodesForUser = `-- name: DeletePreviousPWRestCodesForUser :exec
 DELETE FROM "PasswordResetCodes"
 WHERE user_id = $1
@@ -37,6 +57,16 @@ WHERE user_id = $1
 
 func (q *Queries) DeletePreviousPWRestCodesForUser(ctx context.Context, userID int64) error {
 	_, err := q.db.ExecContext(ctx, deletePreviousPWRestCodesForUser, userID)
+	return err
+}
+
+const deletePreviousVerificationCodesForUser = `-- name: DeletePreviousVerificationCodesForUser :exec
+DELETE FROM "VerificationCodes"
+WHERE user_id = $1
+`
+
+func (q *Queries) DeletePreviousVerificationCodesForUser(ctx context.Context, userID int64) error {
+	_, err := q.db.ExecContext(ctx, deletePreviousVerificationCodesForUser, userID)
 	return err
 }
 
@@ -48,6 +78,18 @@ WHERE "id" = $1 LIMIT 1
 func (q *Queries) GetPWResetCodeEntry(ctx context.Context, id int64) (PasswordResetCode, error) {
 	row := q.db.QueryRowContext(ctx, getPWResetCodeEntry, id)
 	var i PasswordResetCode
+	err := row.Scan(&i.ID, &i.UserID, &i.CreatedOn)
+	return i, err
+}
+
+const getVerificationCodeEntry = `-- name: GetVerificationCodeEntry :one
+SELECT id, user_id, created_on FROM "VerificationCodes"
+WHERE "id" = $1 LIMIT 1
+`
+
+func (q *Queries) GetVerificationCodeEntry(ctx context.Context, id int64) (VerificationCode, error) {
+	row := q.db.QueryRowContext(ctx, getVerificationCodeEntry, id)
+	var i VerificationCode
 	err := row.Scan(&i.ID, &i.UserID, &i.CreatedOn)
 	return i, err
 }
@@ -97,5 +139,21 @@ type UpdateUserProfileBlurbParams struct {
 
 func (q *Queries) UpdateUserProfileBlurb(ctx context.Context, arg UpdateUserProfileBlurbParams) error {
 	_, err := q.db.ExecContext(ctx, updateUserProfileBlurb, arg.ID, arg.ProfileBlurb)
+	return err
+}
+
+const updateVerification = `-- name: UpdateVerification :exec
+UPDATE "Users"
+SET "is_verified" = $2
+WHERE "id" = $1
+`
+
+type UpdateVerificationParams struct {
+	ID         int64 `json:"id"`
+	IsVerified bool  `json:"is_verified"`
+}
+
+func (q *Queries) UpdateVerification(ctx context.Context, arg UpdateVerificationParams) error {
+	_, err := q.db.ExecContext(ctx, updateVerification, arg.ID, arg.IsVerified)
 	return err
 }
