@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.16.0
+//   sqlc v1.17.2
 // source: admins.sql
 
 package generated
