@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.16.0
+//   sqlc v1.17.2
 
 package generated
 
@@ -129,10 +129,9 @@ type User struct {
 }
 
 type VerificationCode struct {
-	ID         int64          `json:"id"`
-	UserID     sql.NullInt64  `json:"user_id"`
-	VerifyCode sql.NullString `json:"verify_code"`
-	CreatedOn  time.Time      `json:"created_on"`
+	ID        int64     `json:"id"`
+	UserID    int64     `json:"user_id"`
+	CreatedOn time.Time `json:"created_on"`
 }
 
 type VoteRecord struct {
