@@ -45,6 +45,7 @@ func (c *GuestController) HandleCommandLogin(comm *communication.Login, server *
 	}
 	loginResponse.LoggedInAs = *prof
 	loginResponse.Email = user.Email
+	loginResponse.IsVerified = user.IsVerified
 	c.AddWrapped("LoginResponse", loginResponse)
 	c.AddMessage(true, "Logged in.")
 
