@@ -70,6 +70,7 @@ func (c *GuestController) HandleCommandRegister(comm *communication.Register, se
 			prof, _ := serv.DB.GetCommUser(&user)
 			loginResponse.LoggedInAs = *prof
 			loginResponse.Email = user.Email
+			loginResponse.IsVerified = user.IsVerified
 			c.AddWrapped("LoginResponse", loginResponse)
 		}
 	}
